syntax = "proto3";

package evidencepb;

option go_package = "oda/api/proto/evidence;evidencepb";

service EvidenceService {
  rpc ListEvidence(ListEvidenceRequest) returns (EvidenceList);
  rpc GetEvidence(GetEvidenceRequest) returns (Evidence);
  rpc ListLocations(ListLocationsRequest) returns (LocationList);
}

message Evidence {
  string id = 1;
  string case_id = 2;
  string name = 3;
  string description = 4;
  string location = 5;
}

message ListEvidenceRequest {
  string case_id = 1;
  string location = 2;
}

message EvidenceList {
  repeated Evidence evidence = 1;
}

message GetEvidenceRequest {
  string id = 1;
}

message Location {
  string name = 1;
}

message ListLocationsRequest {
  string case_id = 1;
}

message LocationList {
  repeated Location locations = 1;
}
